service.yaml
apiVersion: v1
kind: Service
metadata:
    name: otus-service
    namespace: otus
spec:
    selector:
        app: otus
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
    type: ClusterIP
