ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: otus-ingress
    namespace: otus
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
    ingressClassName: nginx
    rules:
    - host: arch.homework
      http:
        paths:
        -  path: /otusapp/.*/.*
           pathType: ImplementationSpecific
           backend:
             service:
                name: otus-service
                port:
                  number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: otus-service
              port:
                number: 80
